<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/itemSalvar"
        android:title="@string/salvarPT"
        app:showAsAction="always"
        android:orderInCategory="1"
        android:icon="@drawable/ic_save_24"
        />

    <item
        android:id="@+id/itemFavoritar"
        android:title="@string/FavoritarPT"
        app:showAsAction="always"
        android:orderInCategory="1"
        android:icon="@drawable/ic_baseline_star_border_24"
        />

    <item
        android:id="@+id/itemSenha"
        android:title="Adicionar senha"
        app:showAsAction="always"
        android:orderInCategory="1"
        android:icon="@drawable/ic_key_24"
        />

    <item
        android:id="@+id/itemDelete"
        android:title="@string/deletarTarefaPT"
        app:showAsAction="always"
        android:orderInCategory="1"
        android:icon="@drawable/ic_delete_24"
        />

    <item
        android:id="@+id/itemCompartilhar"
        android:title="@string/compartilharNotaPT"
        app:showAsAction="always"
        android:orderInCategory="1"
        android:icon="@drawable/ic_share_24"
        />

    <item
        android:id="@+id/itemStatusPositivo"
        android:title="@string/concluidoPT"
        android:orderInCategory="1"
        />

    <item
        android:id="@+id/itemStatusNegativo"
        android:title="@string/naoConcluidoPT"
        android:orderInCategory="1"
        />

    <item
        android:id="@+id/itemSemStatus"
        android:title="@string/semSttsPT"
        android:orderInCategory="1"
        />

</menu>