<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:background="@color/dialog_color_1" />

            <RelativeLayout
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="-75dp"
                android:background="@drawable/round_back_while_stroke_1000"
                android:gravity="center"
                android:padding="20dp">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/round_back_white_1000" />

                <ImageView
                    android:id="@+id/ratingImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:adjustViewBounds="true"
                    android:padding="25dp"
                    android:src="@drawable/four_star" />

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/avalieNossoApp"
                android:textColor="#CC000000"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:gravity="center"
                android:text="@string/avalieNaPlayStore"
                android:textSize="16sp"
                android:textStyle="italic" />

            <androidx.appcompat.widget.AppCompatRatingBar
                android:id="@+id/ratingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:rating="4"
                android:theme="@style/MyRatingBar"
                tools:ignore="SpeakableTextPresentCheck" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:layout_marginBottom="15dp"
                android:padding="3dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/rateNowBtn"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="4dp"
                    android:background="@drawable/round_back_blue_10"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:text="@string/avaliarAgoraPT"
                    android:textAllCaps="false"
                    android:textColor="#FFFFFF"
                    android:textSize="13sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/laterBtn"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/laterBtn"
                    android:layout_width="107dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:background="@drawable/round_back_brown_6"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:text="@string/talvezMaisTardePT"
                    android:textAllCaps="false"
                    android:textColor="#CC000000"
                    android:textSize="13sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/neverBtn"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/rateNowBtn"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/neverBtn"
                    android:layout_width="83dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/round_back_brown_6"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:text="@string/nuncaPT"
                    android:textAllCaps="false"
                    android:textColor="#CC000000"
                    android:textSize="13sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/laterBtn"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>
</ScrollView>